--- a/client/public/index.html
+++ b/client/public/index.html
@@ -28,7 +28,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&display=swap" rel="stylesheet">
-    <title>Pro Manage :: Project Task Manager</title>
+    <title>Pro Manage</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
